fix: fix 404 page layout on small screens

--- a/assets/sass/_miscellaneous.scss
+++ b/assets/sass/_miscellaneous.scss
@@ -39,3 +39,9 @@
     position: absolute;
   }
 }
+
+// 404 page
+.main-404 {
+    padding: 9rem 0;
+    text-align: center;
+}
